--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UXS Engineering Pool</title>
-  <link rel="stylesheet" href="card.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section class="card-list">
