--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </div>
     
     <div class="socials flexone">
-      <a href="https://www.facebook.com/franciscojamesss" target="_blank">facebook</a>
-      <a href="https://www.instagram.com/jbryanmfrancisco/" target="_blank">instagram</a>
-      <a href="https://github.com/bfrancisco" target="_blank">github</a>
+      <a href="https://www.facebook.com/joshua.zapico.1" target="_blank">facebook</a>
+      <a href="https://www.instagram.com/jeoshyung/" target="_blank">instagram</a>
+      <a href="https://github.com/Jeoshyung" target="_blank">github</a>
     </div>
   </article>
 
