--- a/index.html
+++ b/index.html
@@ -53,7 +53,24 @@
       </div>
     </article>
  -->
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Beaux Consunji 🤓</h2>
+        <p>3 BS CS | VP for Engineering</p>
+      </header>
 
+      <div class="truthlie-container flexfour">
+        <button class="lie"><p>I love horror games.</p></button>
+        <button class="truth"><p>I have 10 cats.</p></button>
+        <button class="truth"><p>I went skydiving.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://fb.com/consunji.beaux" target="_blank">facebook</a>
+        <a href="https://instagram.com/beaux.consunji" target="_blank">instagram</a>
+        <a href="https://github.com/BeauxConsunji" target="_blank">github</a>
+      </div>
+    </article>
   </section>
   <script src="main.js"></script>
 </body>
