--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
       </div>
     </article>
 
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Gelo Funelas 🔥</h2>
+        <p>2 BS CS | AVP for Frontend Engineering</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I enjoy programming.</p></button>
+        <button class="lie"><p>I love saturday classes.</p><p class="lie-explain hidden">😢😢😢</p></button>
+        <button class="truth"><p>I have 3 cats.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://www.gemplo.com/" target="_blank">website</a>
+        <a href="https://www.facebook.com/GeloFunelas/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/geloofunz/" target="_blank">instagram</a>
+        <a href="https://github.com/Angelo-Funelas" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
