--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
     <!-- TEMPLATE CARD -->
     <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
     <!-- Feel free to add your socials at the 'socials' div -->
-<!--     
-    <article class="card">
+    
+    <article class="card" style="background: linear-gradient(140deg, rgb(142, 55, 109) 0%, rgb(68, 27, 100) 43%, rgb(43, 9, 82) 72%);">
       <header class="card-header flextwo">
-        <h2>[nickname surname] [fav emoji]</h2>
-        <p>[year & course] | [position]</p>
+        <h2>Chesca Reyes 🤯</h2>
+        <p>3 BS CS | Developer</p>
       </header>
 
       <div class="truthlie-container flexfour">
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="lie"><p>Lorem ipsum.</p></button>
+        <button class="lie"><p>I hate vegetables. 🥬</p></button>
+        <button class="truth"><p>I like pineapples on pizza. 🍕</p></button>
+        <button class="truth"><p>I like Javascript. 💻</p></button>
       </div>
      
       <div class="socials flexone">
-        <a href="#" target="_blank">facebook</a>
-        <a href="#" target="_blank">instagram</a>
-        <a href="#" target="_blank">github</a>
+        <a href="https://www.facebook.com/cheschescheese/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/chesca_owo/" target="_blank">instagram</a>
+        <a href="https://github.com/cheskya" target="_blank">github</a>
       </div>
     </article>
- -->
+  
 
   </section>
   <script src="main.js"></script>
