--- a/index.html
+++ b/index.html
@@ -28,31 +28,24 @@
       </div>
     </article>
 
-    <!-- Add cards here! -->
-
-    <!-- TEMPLATE CARD -->
-    <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
-    <!-- Feel free to add your socials at the 'socials' div -->
-<!--     
-    <article class="card">
+    <article class="card" style="background: linear-gradient(180deg, #1e3250, #06142e);">
       <header class="card-header flextwo">
-        <h2>[nickname surname] [fav emoji]</h2>
-        <p>[year & course] | [position]</p>
+        <h2>Arthur Lluisma 🫡</h2>
+        <p>3 BS CS | Frontend Developer Lead</p>
       </header>
 
       <div class="truthlie-container flexfour">
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="lie"><p>Lorem ipsum.</p></button>
+        <button class="lie"><p>I love working with the JavaScript ecosystem</p></button>
+        <button class="truth"><p>I like my Philosophy class</p></button>
+        <button class="truth"><p>I love shrimp on pizza</p></button>
       </div>
      
       <div class="socials flexone">
-        <a href="#" target="_blank">facebook</a>
-        <a href="#" target="_blank">instagram</a>
-        <a href="#" target="_blank">github</a>
+        <a href="https://www.facebook.com/archur.llusma" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/arthurrrlluismaaa/" target="_blank">instagram</a>
+        <a href="https://github.com/arthurlluisma" target="_blank">github</a>
       </div>
     </article>
- -->
 
   </section>
   <script src="main.js"></script>
