--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
     </article>
 
     <!-- Add cards here! -->
-
     <!-- TEMPLATE CARD -->
     <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
     <!-- Feel free to add your socials at the 'socials' div -->
-<!--     
+
     <article class="card">
       <header class="card-header flextwo">
-        <h2>[nickname surname] [fav emoji]</h2>
-        <p>[year & course] | [position]</p>
+        <h2>Shaira Sy 🪼</h2>
+        <p>3 BS CS | Operation Lead</p>
       </header>
 
       <div class="truthlie-container flexfour">
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="lie"><p>Lorem ipsum.</p></button>
+        <button class="truth"><p>I don't eat vegetables.</p></button>
+        <button class="truth"><p>I collect stickers.</p></button>
+        <button class="lie"><p>I hate Frieren.</p></button>
       </div>
      
       <div class="socials flexone">
-        <a href="#" target="_blank">facebook</a>
-        <a href="#" target="_blank">instagram</a>
-        <a href="#" target="_blank">github</a>
+        <a href="https://www.facebook.com/shairajane.sy" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/_apple.slices" target="_blank">instagram</a>
+        <a href="https://github.com/cherrybleus" target="_blank">github</a>
+        <a href="https://x.com/_appleslice" target="_blank">twitter</a>
       </div>
     </article>
- -->
+
 
   </section>
   <script src="main.js"></script>
