added sherrie's card

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
     <!-- TEMPLATE CARD -->
     <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
     <!-- Feel free to add your socials at the 'socials' div -->
-<!--     
+    
     <article class="card">
       <header class="card-header flextwo">
-        <h2>[nickname surname] [fav emoji]</h2>
-        <p>[year & course] | [position]</p>
+        <h2>Sherrie Del Rosario ✨</h2>
+        <p>3 BS CS DGDD | Developer</p>
       </header>
 
       <div class="truthlie-container flexfour">
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="lie"><p>Lorem ipsum.</p></button>
+        <button class="truth"><p>I like to draw.</p></button>
+        <button class="truth"><p>I like to read.</p></button>
+        <button class="lie"><p>I love my computer science course.</p></button>
       </div>
      
       <div class="socials flexone">
-        <a href="#" target="_blank">facebook</a>
+        <a href="https://fb.com/sherriedelrosario5" target="_blank">facebook</a>
         <a href="#" target="_blank">instagram</a>
-        <a href="#" target="_blank">github</a>
+        <a href="https://github.com/sadelrosario" target="_blank">github</a>
       </div>
     </article>
- -->
+
 
   </section>
   <script src="main.js"></script>
