Added Jaim Info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section class="card-list">
- 
+
     <article class="card">
       <header class="card-header flextwo">
         <h2>Bryan Francisco 🤠</h2>
@@ -20,7 +20,7 @@
         <button class="truth"><p>I hate JavaScript.</p></button>
         <button class="lie"><p>I absolutely love Philosophy, Theology, and Social Science classes.</p></button>
       </div>
-     
+
       <div class="socials flexone">
         <a href="https://www.facebook.com/franciscojamesss" target="_blank">facebook</a>
         <a href="https://www.instagram.com/jbryanmfrancisco/" target="_blank">instagram</a>
@@ -28,31 +28,24 @@
       </div>
     </article>
 
-    <!-- Add cards here! -->
+<article class="card">
+  <header class="card-header flextwo">
+    <h2>Jaim Tan 💾</h2>
+    <p>3 BS CS-DGDD | Developer</p>
+  </header>
 
-    <!-- TEMPLATE CARD -->
-    <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
-    <!-- Feel free to add your socials at the 'socials' div -->
-<!--     
-    <article class="card">
-      <header class="card-header flextwo">
-        <h2>[nickname surname] [fav emoji]</h2>
-        <p>[year & course] | [position]</p>
-      </header>
+  <div class="truthlie-container flexfour">
+    <button class="truth"><p>I got stuck in the snow at a mountain for 30 minutes</p></button>
+    <button class="lie"><p>I can whistle</p></button>
+    <button class="truth"><p>I had my prescription glasses since grade 1</p></button>
+  </div>
 
-      <div class="truthlie-container flexfour">
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="truth"><p>Lorem ipsum.</p></button>
-        <button class="lie"><p>Lorem ipsum.</p></button>
-      </div>
-     
-      <div class="socials flexone">
-        <a href="#" target="_blank">facebook</a>
-        <a href="#" target="_blank">instagram</a>
-        <a href="#" target="_blank">github</a>
-      </div>
-    </article>
- -->
+  <div class="socials flexone">
+    <a href="https://www.facebook.com/jaimkia.tan/" target="_blank">facebook</a>
+    <a href="https://www.instagram.com/jaim_kia/" target="_blank">instagram</a>
+    <a href="https://github.com/jaim-kia" target="_blank">github</a>
+  </div>
+</article>
 
   </section>
   <script src="main.js"></script>
