quick fix: div error

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <a href="https://www.facebook.com/cheschescheese/" target="_blank">facebook</a>
         <a href="https://www.instagram.com/chesca_owo/" target="_blank">instagram</a>
         <a href="https://github.com/cheskya" target="_blank">github</a>
+      </div>
+    </article>
 
     <article class="card" style="background: linear-gradient(180deg, #1e3250, #06142e);">
       <header class="card-header flextwo">
