quick fix: card gap and new template

--- a/index.html
+++ b/index.html
@@ -181,6 +181,33 @@
         <a href="https://github.com/jaim-kia" target="_blank">github</a>
       </div>
     </article>
+
+    <!-- Add cards here! -->
+
+    <!-- TEMPLATE CARD -->
+    <!-- Please copy and paste this template below! DON'T OVERWRITE! -->
+    <!-- Make sure to have 2 truths, 1 lie. Randomize which button is the lie! -->
+    <!-- Feel free to add your socials at the 'socials' div -->
+<!--     
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>[nickname surname] [fav emoji]</h2>
+        <p>[year & course] | [position]</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>Lorem ipsum.</p></button>
+        <button class="truth"><p>Lorem ipsum.</p></button>
+        <button class="lie"><p>Lorem ipsum.</p><p class="lie-explain hidden">Lorem.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="#" target="_blank">facebook</a>
+        <a href="#" target="_blank">instagram</a>
+        <a href="#" target="_blank">github</a>
+      </div>
+    </article>
+ -->
     
   </section>
   <script src="main.js"></script>
