--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </article>
     
-    <article class="card">
+    <article class="card" style="background: linear-gradient(335deg, rgba(31,93,120,1) 16%, rgba(33,222,208,1) 100%);">
       <header class="card-header flextwo">
         <h2>Gelo Funelas 🔥</h2>
         <p>2 BS CS | AVP for Frontend Engineering</p>
