--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
       </div>
     </article>
 
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Justine Evora ⭐</h2>
+        <p>3 BS MIS | Developer</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="lie"><p>I can play the violin</p></button>
+        <button class="truth"><p>I hurt my ankle from falling at the The Church of the Gesù</p></button>
+        <button class="truth"><p>I love frozen yogurt</p></button>
+      </div>
+
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/evorajustine10/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/_evorajustine/" target="_blank">instagram</a>
+        <a href="https://github.com/hustinaa" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
