--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
       </div>
     </article>
 
+    <article class="card" style="background: linear-gradient(135deg, #8e44ad, #e74c3c);">
+      <header class="card-header flextwo">
+        <h2>Hannah Baniqued 🤩</h2>
+        <p>2 BS CS | Developer</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I am a light mode user.</p></button>
+        <button class="lie"><p>I can recite the first 100 digits of pi.</p></button>
+        <button class="truth"><p>I can crack an egg with one hand.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/hannahlei.baniqued/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/_.ohcalamity._/" target="_blank">instagram</a>
+        <a href="https://github.com/macasalad" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
