--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
       </div>
     </article>
 
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Mika Paderna 🥱</h2>
+        <p>2 BS CS | Developer</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="lie"><p>I am a distant relative of Manny Pacquiao.</p></button>
+        <button class="truth"><p>I love League of Legends.</p></button>
+        <button class="truth"><p>I can solve a 3x3 rubik's cube blindfolded.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/profile.php?id=100015906107619" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/zumgaligali12/" target="_blank">instagram</a>
+        <a href="https://github.com/perimeterr" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
