--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
       </div>
     </article>
 
+    <article class="card"></article>
+      <header class="card-header flextwo">
+        <h2>Lamberlain Muli 😎</h2>
+        <p>3 BSMS CS | Backend Developer Lead</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I like my current theology class (Theo13) </p></button>
+        <button class="truth"><p>I cook all my meals</p></button>
+        <button class="lie"><p>I come home every month</p><p class="lie-explain hidden">I only come home every 2 months or less</p></button>
+      </div>
+
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/lambuchoy/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/lamberlainmuli/" target="_blank">instagram</a>
+        <a href="https://github.com/LamberlainMuli" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
