--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </div>
     </article>
 
-    <article class="card"></article>
+    <article class="card">
       <header class="card-header flextwo">
         <h2>Lamberlain Muli 😎</h2>
         <p>3 BSMS CS | Backend Developer Lead</p>
