--- a/index.html
+++ b/index.html
@@ -258,6 +258,26 @@
       </div>
     </article>
 
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Kloe Adriano 😛</h2>
+        <p>3 BS MIS | Apprentice</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I'm a noob at coding</p></button>
+        <button class="truth"><p>I like F1</p></button>
+        <button class="lie"><p>I'm an extrovert</p><p class="lie-explain hidden">I'm an introvert😁</p></button>
+      </div>
+
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/kloe.adriano?mibextid=ZbWKwL" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/kqadriano/" target="_blank">instagram</a>
+        <a href="https://github.com/kloeadriano" target="_blank">github</a>
+      </div>
+    </article>
+
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
