--- a/index.html
+++ b/index.html
@@ -257,7 +257,24 @@
         <a href="https://github.com/LamberlainMuli" target="_blank">github</a>
       </div>
     </article>
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2> Oshwin Hierro [fav emoji]</h2>
+        <p> 3 BS CS | Developer</p>
+      </header>
 
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I have a catenean.</p></button>
+        <button class="truth"><p>I am still hardstuck in Plat in Valorant after 4 years.</p></button>
+        <button class="lie"><p>I love traffic.</p><p class="lie-explain hidden">Lorem.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="#" target="https://www.facebook.com/oooshwin">facebook</a>
+        <a href="#" target="https://www.instagram.com/shwinniiie">instagram</a>
+        <a href="#" target="https://github.com/oooshwin/">github</a>
+      </div>
+    </article>
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
