--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
     </article>
     <article class="card">
       <header class="card-header flextwo">
-        <h2> Oshwin Hierro [fav emoji]</h2>
+        <h2> Oshwin Hierro 😀</h2>
         <p> 3 BS CS | Developer</p>
       </header>
 
       <div class="truthlie-container flexfour">
         <button class="truth"><p>I have a catenean.</p></button>
         <button class="truth"><p>I am still hardstuck in Plat in Valorant after 4 years.</p></button>
-        <button class="lie"><p>I love traffic.</p><p class="lie-explain hidden">Lorem.</p></button>
+        <button class="lie"><p>I love traffic.</p><p class="lie-explain hidden"></p></button>
       </div>
      
       <div class="socials flexone">
