--- a/index.html
+++ b/index.html
@@ -258,6 +258,25 @@
       </div>
     </article>
 
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Kyleisha Umbay 🐋</h2>
+        <p>3 BS CS | Developer</p>
+      </header>
+
+      <div class="truthlie-container flexfour">
+        <button class="truth"><p>I have 9 dogs.</p></button>
+        <button class="lie"><p>Michael Jordan is the GOAT.</p><p class="lie-explain hidden">Lebron James is the GOAT.</p></button>
+        <button class="truth"><p>My favorite game is Stardew Valley.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/mariekyleisha" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/mariekyleisha" target="_blank">instagram</a>
+        <a href="https://github.com/kyleishaumbay" target="_blank">github</a>
+      </div>
+    </article>
+
     <!-- Add cards here! -->
 
     <!-- TEMPLATE CARD -->
