--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       </div>
     </article>
 
-    <article class="card">
+    <article class="card" id="waleedlugod" style="background: conic-gradient(from 0deg at 50% 51%, #B0E0E6 0%, #011757FF 50%, #B0E0E6 100%)">
       <header class="card-header flextwo">
         <h2>Waleed Lugod 🐣</h2>
         <p>3 BS CS | Developer</p>
