--- a/index.html
+++ b/index.html
@@ -370,6 +370,24 @@
         <a href="https://github.com/cheesepringles" target="_blank">github</a>
       </div>
     </article>
+
+    <article class="card">
+      <header class="card-header flextwo">
+        <h2>Marco Gimena 💀</h2>
+        <p>3 BS CS-DGDD | Developer</p>
+      </header>
+      <div class="truthlie-container flexfour">
+        <button class="lie"><p>I can't eat without watching youtube.</p><p class="lie-explain hidden">I can.</p></button>
+        <button class="truth"><p>I like dogs.</p></button>
+        <button class="truth"><p>I like godot.</p></button>
+      </div>
+     
+      <div class="socials flexone">
+        <a href="https://www.facebook.com/marcoemmanuel.gimena/" target="_blank">facebook</a>
+        <a href="https://www.instagram.com/marco_gimena/" target="_blank">instagram</a>
+        <a href="https://github.com/larcomicious" target="_blank">github</a>
+      </div>
+    </article>
     
     <!-- Add cards here! -->
 
